# CobraObfuscator

./: .gitignore  Cargo.toml  README.md  code.asm  dispatcher.py  end.asm  obfuscate.py  obfuscated_code.asm  output.asm  test.py  text.asm  v2.py
CobraBox/: Cargo.toml  main.py
CobraBox/src/: main.rs
cobra-obfuscator/src/: config.rs  lib.rs  main.rs  pipeline.rs
cobra-obfuscator/src/coff/: types.rs  writer.rs
cobra-obfuscator/src/encode/: assembler.rs  reloc_fixup.rs
cobra-obfuscator/src/ir/: function.rs  relocation.rs
cobra-obfuscator/src/passes/: control_flow_flatten.rs  dead_code.rs  junk_insertion.rs
cobra-obfuscator/src/pe/: mod.rs  reader.rs  types.rs  writer.rs
cobra-obfuscator/tests/: loops.c  medium.c  run_matrix.sh  selfval.c  switch_heavy.c
cobra-v2/: CMakeLists.txt  README.md
cobra-v2/.cache/clangd/index/: AntiTamper.cpp.CEA57A8345AC86BE.idx  BogusCF.cpp.99904900C9E8160E.idx  CFF.cpp.C9050F9480D2CDDE.idx  CobraConfig.h.E1C3DB08730D6CAC.idx  ConstantUnfold.cpp.59FE7B7A832E7D83.idx  DeadCode.cpp.4C9870326E63BD27.idx  FuncMergeSplit.cpp.EAEC981C3FE26F2E.idx  IndirectBranch.cpp.371A502E524F2D5D.idx  InsnSubstitution.cpp.B16150B4E0C5EE75.idx  JunkInsertion.cpp.8852A4A30E2C5F75.idx  MBA.cpp.70D94C394E6337D2.idx  OpaquePredicates.cpp.B9188F98B12F79E6.idx  OpaquePredicates.h.19CCFABE7B208057.idx  PassPipeline.cpp.EC555712750B79AB.idx  PassPipeline.h.776E6C02DE879BEA.idx  Passes.h.C77C021B2FAD4AF2.idx  RNG.h.4BDA3C36557E520C.idx  Stats.cpp.CF287022F693C626.idx  Stats.h.15660AAC689DF950.idx  StringEncrypt.cpp.E57E806763D9F7FA.idx  SymbolStrip.cpp.3DD1CAC2487EB259.idx  main.cpp.71C4911F0BAB0698.idx
cobra-v2/include/cobra/: CobraConfig.h  OpaquePredicates.h  PassPipeline.h  Passes.h  RNG.h  Stats.h
cobra-v2/src/: PassPipeline.cpp  Plugin.cpp  Stats.cpp  main.cpp
cobra-v2/src/passes/: AntiTamper.cpp  BogusCF.cpp  CFF.cpp  ConstantUnfold.cpp  DeadCode.cpp  FuncMergeSplit.cpp  IndirectBranch.cpp  InsnSubstitution.cpp  JunkInsertion.cpp  MBA.cpp  StringEncrypt.cpp  SymbolStrip.cpp
cobra-v2/src/utils/: OpaquePredicates.cpp
cobra-v2/test/: lit.cfg.py
cobra-v2/test/e2e/: anti_tamper.c  arith.c  arrays.c  bitwise.c  controlflow.c  cpp_classes.cpp  cpp_exceptions.cpp  cpp_templates.cpp  function_pointers.c  loops.c  math_heavy.c  recursion.c  run_e2e.sh  rust_basic.rs  strings.c  structs.c  switch.c  varargs.c
cobra-v2/test/passes/: anti-tamper.ll  bogus-cf.ll  cff-diversity.ll  cff.ll  constant-unfold.ll  dead-code.ll  func-merge-split.ll  indirect-branch.ll  insn-substitution.ll  junk-insertion.ll  mba.ll  string-encrypt.ll  symbol-strip.ll
docs/superpowers/plans/: 2026-03-30-cobra-v2-llvm-obfuscator.md  2026-03-31-v2-features-batch.md
docs/superpowers/specs/: 2026-03-30-cobra-v2-llvm-obfuscator-design.md
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/coff/: mod.rs  reader.rs
src/encode/: mod.rs
src/ir/: basic_block.rs  cfg.rs  instruction.rs  mod.rs
src/passes/: dead_code.rs  insn_substitution.rs  mod.rs  pass_trait.rs
src/pe/: fluctuation.rs  imports.rs  mod.rs  pdata.rs  reader.rs  reloc.rs  strings.rs  types.rs  writer.rs
tests/: bitops.c  fluctuation.c  func_ptrs.c  minimal.c  recursion.c  run_matrix.sh  rust_dll_loader.c  structs.c  test_dll.c  test_dll_loader.c
tests/go_algorithms/: go.mod  main.go
tests/go_crypto/: go.mod  main.go
tests/rust_crypto/: Cargo.toml
tests/rust_crypto/src/: main.rs
tests/rust_dll/: Cargo.toml
tests/rust_dll/src/: lib.rs
tests/rust_structs/: Cargo.toml
tests/rust_structs/src/: main.rs
